Fix logo spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ header h1 {
 
 .logo {
     height: 10rem;
-    margin: 2rem 0;
+    margin: 25% 0;
 }
 
 /* button {
